# blunux2SB

./: Cargo.toml  README.md  build.jl  config.toml  prd.md
blunux-ai-agent/: blunux-ai-agent-PRD.md  blunux-ai-agent-TDD.md  blunux-ai-agent-USER-GUIDE.md
blunux-ai-installer/: ai-agent.card.json  install-ai-agent.sh
blunux-whatsapp-bridge/: package.json
blunux-whatsapp-bridge/src/: bridge.js  config.js  index.js  ipc.js
blunux-whatsapp-bridge/systemd/: blunux-ai-agent.service  blunux-wa-bridge.service
crates/ai-agent/: Cargo.toml
crates/ai-agent/src/: agent.rs  automations.rs  config.rs  daemon.rs  error.rs  ipc.rs  lib.rs  main.rs  memory.rs  setup.rs  strings.rs
crates/ai-agent/src/providers/: claude.rs  deepseek.rs  mod.rs
crates/ai-agent/src/tools/: mod.rs  packages.rs  safety.rs  services.rs  system.rs
crates/ai-agent/tests/: integration_test.rs
crates/blunux-config/: Cargo.toml
crates/blunux-config/src/: lib.rs
crates/libblunux/: Cargo.toml
crates/libblunux/src/: config.rs  ffi.rs  hwdetect.rs  lib.rs
crates/setup/: Cargo.toml
crates/setup/src/: main.rs  packages.rs
crates/toml2cal/: Cargo.toml
crates/toml2cal/src/: generate.rs  main.rs  packages.rs
crates/wizard/: Cargo.toml
crates/wizard/src/: hwdetect.rs  main.rs
packaging/aur/blunux-ai-agent/: .SRCINFO  PKGBUILD
packaging/aur/blunux-wa-bridge/: .SRCINFO  PKGBUILD
profile/: pacman.conf  profiledef.sh
profile/grub/: grub.cfg
profile/syslinux/: syslinux.cfg
scripts/: blunux-setup  calamares-blunux  startblunux
src/livecd/: main.jl
tests/: iso_integration.jl
(+2 files in other folders)
