[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"
description = "Blunux AI Agent — natural language Linux system management"
license = "MIT"

[[bin]]
name = "blunux-ai"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
dialoguer = "0.11"
crossterm = "0.28"
indicatif = "0.17"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
blunux-config = { path = "../blunux-config" }

[dev-dependencies]
tempfile = "3"
