[package]
name = "blunux-toml2cal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blunux-toml2cal"
path = "src/main.rs"

[dependencies]
blunux-config = { path = "../blunux-config" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
